updated to use proper names

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('adwvalatest', ['c', 'vala'],
+project('archivex', ['c', 'vala'],
           version: '0.1.0',
     meson_version: '>= 0.59.0',
   default_options: [ 'warning_level=2', 'werror=false', ],
@@ -6,7 +6,6 @@ project('adwvalatest', ['c', 'vala'],
 
 i18n = import('i18n')
 gnome = import('gnome')
-
 
 
 subdir('data')
