--- a/data/com.merlin.ArchiveX.desktop.in
+++ b/data/com.merlin.ArchiveX.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=adwvalatest
-Exec=adwvalatest
-Icon=local.adw.Test
+Name=archivex
+Exec=archivex
+Icon=com.merlin.ArchiveX
 Terminal=false
 Type=Application
 Categories=GTK;
