--- a/src/meson.build
+++ b/src/meson.build
@@ -1,18 +1,18 @@
-adwvalatest_sources = [
+archivex_sources = [
   'main.vala',
   'application.vala',
   'file_view.vala',
   'archive.vala',
 ]
 
-adwvalatest_deps = [
+archivex_deps = [
   dependency('gtk4'),
   dependency('libadwaita-1'),
   dependency('gee-0.8'),
   meson.get_compiler('vala').find_library('posix'),
 ]
 
-executable('adwvalatest', adwvalatest_sources,
-  dependencies: adwvalatest_deps,
+executable('archivex', archivex_sources,
+  dependencies: archivex_deps,
        install: true,
 )
